ags (0.9.20)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved pulseaudio eliminate feedback

ags (0.9.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* provide quadratic and practical icon size
	* improved pulseaudio underflow detection
	* fixed pulseaudio non-initialized value might be a buffer-overflow

ags (0.9.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-oscillator-list restore failed due to typo

ags (0.9.17)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed read of not finished write buffer during export audio file
	* fixed AgsExportWindow file exists response
	* fixed AgsExportWindow dead-lock during cancel of not existing playback
	* improved gsequencer.desktop to provide png file

ags (0.9.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* provide context menu

ags (0.9.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved gtk-doc installation and introduced fix-local-html and fix-online-html target
	* fixed missing check for NULL of gtk_combo_box_text_append_text() parameter in all source code
	* fixed missing LV2_UI cleanup handling
	* fixed missing pulseaudio backend in AgsExportSoundcard

ags (0.9.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_pulse_port_get_latency()
	* improved throughput of pulseaudio by timed cond on stream request callback
	* fixed possible SIGSEGV as ags_channel_reset_recall_id()

ags (0.9.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_devout_adjust_delay_and_attack() and related
	* improved AgsPulsePort to omit polling thread twice
	* fixed missing volatile of AgsPollingThread's flags
	* fixed destroy machine crash during playback

ags (0.9.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added mutices to AgsJackServer and AgsPulseServer