@@ -1,3 +1,8 @@
+ags (0.9.21)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved pulseaudio restart stream
+
 ags (0.9.20)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
